# code-jam-2025

./: .gitignore  .pre-commit-config.yaml  CJ12 Presentation.md  LICENSE.txt  README.md  cookies.py  html_parser.py  index.html  index2.html  main.py  pyproject.toml  pyscript.toml  states.txt
htmlparser/: __init__.py  _htmlparser.py  _types.py  htmlparser.py  tokenizer.py  treeconstructor  treeconstructor.py  types.py
renderer/: __init__.py  _types.py  render.py
static/css/: styles.css
static/python/: _htmlparser.py  browser_nav.py  cookies.py  htmlparser_types.py  pyscript.toml  render.py  render_types.py  tokenizer.py  treeconstructor.py
tests/: test_cookies.py
