[project]
name = "pyBrowser"
description = "A Python web browser for the web."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "pre-commit>=4.2.0",
    "pyscript>=0.3.3",
    "ruff>=0.12.8",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pre-commit~=4.2.0",
    "ruff~=0.12.2",
]

[tool.ruff]
line-length = 119
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Missing docstrings.
    "D100",
    "D104",
    "D105",
    "D106",
    "D107",
    # Docstring whitespace.
    "D203",
    "D213",
    # Docstring punctuation.
    "D415",
    # Docstring quotes.
    "D301",
    # Builtins.
    "A",
    # Print statements.
    "T20",
    # TODOs.
    "TD002",
    "TD003",
    "FIX",
]
